# polymarket-bot

./: .env.example  .gitignore  CLAUDE.md  README.md  project-overview.txt  pyproject.toml  run.py
.claude/: settings.local.json
crypto/: .env.example  pyproject.toml  run.py
crypto/src/: bot.py  config.py  data_feed.py  db.py  indicators.py  risk.py  scanner.py  settler.py  tracker.py
crypto/src/backtester/: __init__.py  engine.py  runner.py
crypto/src/strategies/: __init__.py  base.py  ema_cross.py  macd_hist.py  rsi_bb.py  vwap_cap.py
crypto/tests/: test_backtest.py  test_bot.py  test_config.py  test_data_feed.py  test_db.py  test_indicators.py  test_risk.py  test_scanner.py  test_settler.py  test_strategies.py  test_tracker.py
data/: activity.json
deploy/: crypto-setup.sh  polymarket-bot.service  polymarket-crypto-bot.service  polymarket-crypto-settler.service  polymarket-settler.service  polymarket-web.service  setup.sh
src/: activity.py  config.py  db.py  models.py  pipeline.py  pnl.py
tests/: test_clob.py  test_coingecko.py  test_config_weights.py  test_crypto_config.py  test_crypto_db.py  test_dashboard_service.py  test_db_migration.py  test_exit_logic.py  test_fred.py  test_metaculus.py  test_newsapi.py  test_odds_data.py  test_pipeline.py  test_pnl.py  test_postmortem.py  test_predictit.py  test_predictor.py  test_research.py  test_research_base.py  test_research_pipeline.py  test_risk.py  test_scanner.py  test_sentiment.py  test_settler.py  test_sports_data.py  test_structured_pipeline.py  test_team_extractor.py  test_telegram.py  test_web.py  (+2 more)
(+65 files in other folders)
