[project]
name = "polymarket-bot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "py-clob-client>=0.34.0",
    "anthropic>=0.50.0",
    "xgboost>=2.1.0",
    "praw>=7.8.0",
    "twscrape>=0.13.0",
    "feedparser>=6.0.0",
    "vaderSentiment>=3.3.2",
    "transformers>=4.40.0",
    "torch>=2.2.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.4.0",
    "textual>=0.50.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "jinja2>=3.1.0",
    "newsapi-python>=0.2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
