[project]
name = "polymarket-crypto-bot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pandas-ta>=0.3.14b1",
    "ccxt>=4.2.0",
    "py-clob-client>=0.34.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
